workload refactoring